# Standalone-OceanKeyak

./: .gitignore  CMakeLists.txt  KeccakP-1600-times4-SnP.h  Keyak.c  Keyak.sln  Keyak.vcxproj  Keyak.vcxproj.filters  README.md  encrypt.c  main.c  test_crypto_aead.c  test_crypto_aead.h
CMake/: FindSodium.cmake
src/: CMakeLists.txt  KeccakP-1600-times4-SIMD256.c  KeccakP-1600-unrolling.macros  Keyakv2.h  api.h  config.h  encrypt.c  encrypt.h  main.c
tests/: CMakeLists.txt  UT.c  UT.h  keyak_test.cpp  testKeyakv2.c  testKeyakv2.h  testKeyakv2.inc
